# quefairedemesobjets

./: .buildinfo  .clever.json  .env.template  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .lighthouserc.json  .parcelrc  .postcssrc  .pre-commit-config.yaml  .secrets.baseline  .slugignore  .tool-versions  AGENTS.md  APPLICATION.md  Aptfile  IMPLEMENTATION_SUMMARY.md  LICENSE  LVAO-Partenaires.md  Makefile  Pipfile  Procfile  Procfile.all.dev  Procfile.dev  Procfile.django.dev  README.airflow.md  README.html  README.md  SECURITY.md  SESSION_HANDOFF_preview_environment.md  SOUVENIR.html  airflow-dag-processor.Dockerfile  airflow-requirements.in  airflow-requirements.txt  airflow-scheduler.Dockerfile  airflow-webserver.Dockerfile  api.AGENTS.md  api.postman_collection.json  cms-requirements.in  cms-requirements.txt  (+37 more)
data-platform/: .gitignore  Makefile  airflow-dag-processor-start.sh  airflow-dag-processor.Dockerfile  airflow-scheduler.Dockerfile  airflow-webserver-start.sh  airflow-webserver.Dockerfile  pyproject.toml
data-platform/dags/: .airflowignore  .env.template
data-platform/dags/e2e_tests/: e2e_utils.py  test_e2e_dag_cluster_acteurs_airflow.py  test_e2e_dag_template_read_db.py
data-platform/dags/tests/: conftest.py
data-platform/dags/utils/: airflow_params.py  data_serialize_reconstruct.py  dataframes.py  db_tmp_tables.py  django.py  docs.py  logging_utils.py
data-platform/dbt/: Makefile  README.md  dbt_project.yml  packages.yml  profiles.yml
data-platform/notebooks/: 20241031_acteurs_inactifs_reparation_lvao_ancien_cma.ipynb  README.md  acteur_fix_siret_9char_vs_siren.ipynb  acteur_fix_siret_vs_siren.ipynb  acteur_siret_siren_space.ipynb  clustering.ipynb  clustering_from_file.ipynb  deduplication.ipynb
data-platform/notebooks/deduplication/: Untitled.ipynb  dataset_creation.ipynb  deduplication_old.ipynb  feature_engineering.ipynb  pyproject.toml  training.ipynb  training_pipeline.py
data-platform/scripts/: db_cleanup.sh
data-platform/scripts/infrastructure/: purge_db_logs.sh
docs/: Coding-guidelines  Commands.md  Frontend.md  HOME.md  Makefile  Organisations-des-fichiers-dans-dags.md  README.md  SOUVENIR.md  conf.py  llm-powered-search.md  pyproject.toml  toctree.py
docs/ai/: multi-agents-architecture.md
docs/ai/team/: designer.md  dev.md  lead.md  po.md  testeur.md
docs/comment-faire/: 201-production-rollback.md  Commandes-Django.md  README.md  _sidebar.md  auditer-une-source-de-donnees.md  deployment.md  development.md  generer-des-fixtures.md  stack-data.md  troubleshooting.md
docs/comment-faire/administration/: README.md  admin_command.md  update-ext-id.md
docs/comment-faire/data/: airflow-v3-migration.md  config-dev-env.md  deployment.md
docs/comment-faire/deployment/: deployment.md
docs/comment-faire/development/: README.md  create_webapp_sample_db.md  dependencies.md  development.md  installation.md  (+4 more)
docs/dbt/: catalog.json  manifest.json
docs/explications/: 101-ingestion-de-source.md  README.md  routing-nginx-cache.md  🎨 Frontend.md  🚏 Routing, nginx et cache.md
docs/how-to/: README.md  troubleshooting.md
docs/reference/: 201-frontend.md  301-db-guidelines.md  302-organisations-des-fichiers-data.md  303-conventions-plateforme-donnees.md  303-systeme-de-suggestions.md  901-documentation-technique.md  Coding-guidelines.md  DB-guidelines.md  Documentation-technique.md  Frontend.md  README.md  documentation-technique.md  frontend.md  security.md
docs/tutoriels/: README.md  generer-des-fixtures.md
ml_deduplication/: .gitignore  README.md  main.py  pyproject.toml
webapp/: .buildpacks  .dockerignore  .env.template  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .parcelrc  .slugignore  Aptfile  Dockerfile  Makefile  Procfile  Procfile.all.dev  Procfile.django.dev  api.postman_collection.json  eslint.config.js  jest.config.ts  manage.py  package-lock.json  package.json  playwright.config.ts  playwright.regression.ts  pyproject.toml  redirects.csv  servers.conf.erb  tailwind.config.js  tsconfig.json
webapp/.claude/: settings.local.json
webapp/core/: admin.py  airflow_settings.py  api.py  asgi.py  constants.py  context_processors.py  exceptions.py  settings.py  test_settings.py  url_utils.py  urls.py  utils.py  validators.py  views.py  widgets.py  wsgi.py
webapp/data/: admin.py  forms.py  services.py  tasks.py  urls.py  views.py
webapp/dsfr_hacks/: colors.js  colors.py  extract_dsfr_semantic_colors.js  extract_dsfr_typography.js  extract_used_colors.py  forms.py  semantic_colors.js  typography.js  urls.py  used_icons.js
webapp/e2e_tests/: a11y.spec.ts  a11y_mineurs.spec.ts  a11y_rgaa.spec.ts  accessibility.spec.ts  acteur.spec.ts  analytics.spec.ts  assistant.spec.ts  browser_version.spec.ts  carte.spec.ts  carte_address_combobox.spec.ts  carte_config.spec.ts  carte_geojson_flow.spec.ts  carte_pinpoint_no_reload.spec.ts  chrome_extension.spec.ts  cohorte_review.spec.ts  copy_controller.spec.ts  debug-search.spec.ts  django-admin.spec.ts  embed_scripts.spec.ts  fixtures.ts  formulaire.spec.ts  helpers.ts  homepage.spec.ts  iframe.spec.ts  iframe_navigation.spec.ts  infotri.spec.ts  mode_liste.spec.ts  navigation.spec.ts  produit_carte_ab.spec.ts  regression.spec.ts  search.spec.ts
webapp/infotri/: apps.py  constants.py  urls.py  views.py
webapp/mcp_server/: api_client.py  apps.py  catalog.py  docs.py  server.py  tools.py  urls.py  views.py
webapp/nginx/: Dockerfile  entrypoint.sh  nginx.conf  test_nginx.py
webapp/parcel-transformers/: remove-ie-hack.ts
webapp/previews/: template_preview.py
webapp/qfdmd/: admin.py  apps.py  blocks.py  forms.py  legacy_migration.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py  wagtail_hooks.py
webapp/qfdmo/: api.py  apps.py  forms.py  geo_api.py  urls.py  validators.py  widgets.py
webapp/search/: constants.py  models.py  score_breakdown.py  wagtail_hooks.py
webapp/settings/: __init__.py  airflow.py  base.py  dev.py  production.py  test.py
webapp/stats/: schemas.py  utils.py
webapp/templates/: robots.txt
webapp/unit_tests/: conftest.py
(+4444 files in other folders)
