[project]
name = "quefairedemesobjets"
version = "0.1.0"
description = "Que faire de mes objets et déchets — monorepo workspace"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = ["webapp", "data-platform"]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "factory-boy>=3.3.1,<4",
    "pre-commit>=4.6.0,<5",
    "pytest>=9.0.3,<10",
    "pytest-django>=4.9.0,<5",
    "pytest-dotenv>=0.5.2,<0.6",
    "pytest-mock>=3.14.1,<4",
    "ruff>=0.15.16,<0.16",
]

[tool.uv]
package = false
