[project]
name = "quefairedemesobjets"
version = "0.1.0"
description = "Que faire de mes objets et déchets — monorepo workspace"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = ["webapp", "data-platform"]

[dependency-groups]
lint = [
    "black>=25.1.0,<26",
    "ruff>=0.15.16,<0.16",
]
test = [
    "factory-boy>=3.3.1,<4",
    "pytest>=9.0.3,<10",
    "pytest-django>=4.9.0,<5",
    "pytest-dotenv>=0.5.2,<0.6",
    "pytest-mock>=3.14.1,<4",
    "wagtail-factories>=4.5.0,<5",
    "beautifulsoup4>=4.15.0,<5",
]

tooling = [
    "djade>=1.9.0,<2",
    "pre-commit>=4.6.0,<5",
    "ptpython>=3.0.30,<4",
]

django = [
    "django-browser-reload>=1.17.0,<2",
    "django-debug-toolbar>=6.3.0,<7",
    "django-silk>=5.5.0",
]

dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "django"},
    {include-group = "tooling"},
]

[tool.uv]
package = false
