[project]
name = "quefairedemesobjets"
version = "0.1.0"
description = "Que faire de mes objets et déchets — monorepo workspace"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = ["webapp", "data-platform"]

[tool.uv]
package = false

[dependency-groups]
lint = [
    "black>=26.3.1,<27",
    "ruff>=0.15.18,<0.16",
]
test = [
    "pytest>=9.1.1,<10",
    "pytest-django>=4.9.0,<5",
    "pytest-dotenv>=0.5.2,<0.6",
    "pytest-mock>=3.14.1,<4",
    "factory-boy>=3.3.1,<4",
    "wagtail-factories>=4.5.0,<5",
    "beautifulsoup4>=4.15.0,<5",
]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "djade>=1.9.0,<2",
    "pre-commit>=4.6.0,<5",
]
webapp-dev = [
    "django-browser-reload>=1.21.0,<2",
    "django-debug-toolbar>=7.0.0,<8",
    "django-silk>=5.5.0",
    "ptpython>=3.0.32,<4",
]
notebook = [
    "dedupe>=3.0.3",
    "ipython>=9.14.1,<10",
]
