[project]
name = "data-platform"
version = "0.0.0"
description = "Data platform - Airflow DAGs, dbt"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-airflow-providers-amazon>=9.4.0",
    "apache-airflow-providers-postgres>=6.2.2,<7",
    "apache-airflow>=2.11.0,<3",
    "dbt-core>=1.10.9,<2",
    "dbt-postgres>=1.9.1,<2",
    "fuzzywuzzy>=0.18.0,<0.19",
    "numpy>=1.26.0,<2",
    "pandas<2.2",
    "python-decouple~=3.8",
    "ratelimit>=2.2.1,<3",
    "scikit-learn==1.8.0",
    "shapely>=2.1.1,<3",
    "shortuuid>=1.0.13,<2",
    "unidecode>=1.4.0,<2",
    "webapp-quefairedemesobjetsetdechets",
]

[tool.uv]
package = false

[tool.uv.sources]
webapp-quefairedemesobjetsetdechets = { path = "../webapp", editable = true }
