[project]
name = "data-platform"
version = "0.0.0"
description = "Data platform - Airflow DAGs, dbt"
requires-python = ">=3.12,<3.13"
dependencies = [
  "apache-airflow-providers-amazon>=9.31.0",
  "apache-airflow-providers-fab>=3.7.0",
  "apache-airflow-providers-postgres>=6.8.0,<7",
  "apache-airflow-providers-standard>=1.15.0",
  "apache-airflow>=3.2.2,<4",
  "boto3>=1.43.36",
  "dbt-core>=1.11.11,<2",
  "dbt-postgres>=1.10.2,<2",
  "fuzzywuzzy>=0.18.0,<0.19",
  "numpy>=1.26.0,<2",
  "pandas<2.2",
  "pyarrow>=23.0.1",
  "python-decouple~=3.8",
  "python-levenshtein>=0.27.1,<0.28",
  "ratelimit>=2.2.1,<3",
  "scikit-learn==1.9.0",
  "shapely>=2.0.0",
  "shortuuid>=1.0.13,<2",
  "unidecode>=1.4.0,<2",
  "webapp-quefairedemesobjetsetdechets",
]

[dependency-groups]
dev = [
  "black>=25.1.0,<26",
  "factory-boy>=3.3.1,<4",
  "pytest>=9.1.1,<10",
  "pytest-django>=4.9.0,<5",
  "pytest-dotenv>=0.5.2,<0.6",
  "pytest-mock>=3.14.1,<4",
  "ruff>=0.15.20,<0.16",
  "dedupe>=3.0.3",
  "ipython>=9.15.0,<10",
  "sqlfluff[rs]>=4.2.2",
  "sqlfluff-templater-dbt>=4.2.2",
]

[tool.pytest.ini_options]
# Full app graph (qfdmo → qfdmd, Wagtail CMS, etc.): required for migrate in django_db tests.
# Airflow continues to use settings.airflow via django_setup_full() / env outside pytest.
DJANGO_SETTINGS_MODULE = "settings.test"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "**/migrations/*.py",
  "*.ipynb",
]

line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
ignore = []
exclude = ["**/migrations/*.py"]

fixable = ["ALL"]
unfixable = []

per-file-ignores = {}

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.uv]
package = false

[tool.uv.sources]
webapp-quefairedemesobjetsetdechets = { path = "../webapp", editable = true }


[tool.sqlfluff.core]
templater = "dbt"
dialect = "postgres"

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.templater.jinja.macros]
# Macros provided as builtins for dbt projects
dbt_is_incremental = "{% macro is_incremental() %}True{% endmacro %}"
dbt_ref = "{% macro ref(model_ref) %}{{model_ref}}{% endmacro %}"
dbt_source = "{% macro source(source_name, table) %}{{source_name}}_{{table}}{% endmacro %}"
dbt_config = "{% macro config() %}{% for k in kwargs %}{% endfor %}{% endmacro %}"
dbt_var = "{% macro var(variable, default='') %}item{% endmacro %}"

[tool.sqlfluff.templater.dbt]
profiles_dir = "./dbt"
project_dir = "./dbt"
