[project]
name = "quefairedemesobjets-docs"
version = "0.0.0"
description = "Technical documentation for « Que faire de mes objets et déchets »"
requires-python = ">=3.12,<3.13"
dependencies = [
  "myst-parser>=4.0.0,<5",
  "sphinx>=8.1.3,<9",
  "furo>=2025.7.19,<2026",
  "detect-secrets>=1.5.0,<2",
  "sphinxcontrib-mermaid>=1.0.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

