[project]
name = "ml-deduplication"
version = "0.1.0"
description = "Machine learning project for acteur deduplication."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "connectorx>=0.4.5",
    "dedupe>=3.0.3",
    "polars>=1.42.0",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.69.0",
]

[dependency-groups]
dev = [
    "pandas>=3.0.3",
    "ruff>=0.15.18",
]
