[project]
name = "webapp"
version = "1.57.0"
description = "Django app - Que faire de mes objets et dechets"
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "boto3<1.43",
    "dj-database-url>=3.0.1,<4",
    "django>=6.0,<7",
    "django-extensions~=4.1",
    "django-import-export[xls, xlsx]>=4.3.8,<5",
    "django-ninja>=1.4.3,<2",
    "django-storages>=1.14.6,<2",
    "gunicorn>=23.0.0,<24",
    "opening-hours-py>=1.1.3,<2",
    "orjson>=3.11.1,<4",
    "pillow>=11.2.1,<13",
    "psycopg",
    "python-decouple~=3.8",
    "requests>=2.32.4,<3",
    "sentry-sdk>=2.37.0,<3",
    "shortuuid>=1.0.13,<2",
    "unidecode>=1.4.0,<2",
    "whitenoise>=6.8.2,<7",
    "django-widget-tweaks>=1.5.0,<2",
    "django-cors-headers>=4.6.0,<5",
    "django-colorfield>=0.14.0,<0.15",
    "django-dsfr>=3,<4",
    "rapidfuzz>=3.13.0,<4",
    "diff-match-patch>=20241021,<20241022",
    "django-lookbook>=1.0.2,<2",
    "queryish>=0.2,<0.4",
    "detect-secrets>=1.5.0",
    "djangoql>=0.18.1",
    "pydantic[email]>=2.11.7",
    "django-admin-sortable2>=2.2.8",
    "more-itertools>=10.7.0",
    "wagtail-honeypot>=1.2.1",
    "sites-conformes>=2.5.2rc1",
    "wagtail==7.3",
    "pre-commit>=4.5.1",
    "modelsearch>=1.1.1",
    "wagtailmenus>=4.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "data", "dsfr_hacks", "infotri", "qfdmd", "qfdmo", "search", "stats"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.test_settings"
env_files = [".env.template"]
addopts = "--ignore=scripts"
filterwarnings = [
  # Because of django-ninja package, cf. https://github.com/vitalik/django-ninja/issues/1266
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "django-browser-reload>=1.17.0,<2",
    "django-debug-toolbar>=6.0.0,<7",
    "factory-boy>=3.3.1,<4",
    "honcho>=2.0.0,<3",
    "pre-commit>=4.3.0,<5",
    "ptpython>=3.0.30,<4",
    "beautifulsoup4>=4.13.5,<5",
    "pytest>=8.4.2,<10",
    "pytest-django>=4.9.0,<5",
    "pytest-dotenv>=0.5.2,<0.6",
    "pytest-mock>=3.14.1,<4",
    "wagtail-factories>=4.2.1,<5",
    "ruff>=0.12.10,<0.15",
    "shapely>=2.1.1,<3",
    "djade>=1.6.0,<2",
    "dslr>=0.6.0,<0.7",
]
docs = [
    "myst-parser>=4.0.0,<5",
    "sphinx>=8.1.3,<9",
    "furo>=2025.7.19,<2026",
    "detect-secrets>=1.5.0,<2",
    "sphinxcontrib-mermaid>=1.0.0,<3",
]

[tool.uv.sources]
django-dsfr = { git = "https://github.com/fabienheureux/django-dsfr", rev = "d26ab6f77014b04c43c4c54f694111179d1de0ef" } # pragma: allowlist secret
modelsearch = { git = "https://github.com/fabienheureux/django-modelsearch", rev="0d7b25e"}
