[project]
name = "deduplication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "black>=25.12.0",
    "connectorx>=0.4.5",
    "dedupe>=3.0.3",
    "jupyterlab>=4.6.0",
    "jupyterlab-code-formatter>=3.0.3",
    "jupyterlab-execute-time>=3.3.0",
    "jupyterlab-lsp>=5.3.0",
    "pandas>=2.1.4",
    "polars>=1.42.0",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=24.0.0",
    "python-lsp-server[all]>=1.14.0",
    "ruff>=0.15.18",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.49",
]
